--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -33,7 +33,7 @@ We try to illustrate this below:
 
 We can use the `caret` package in R to not only perform k-nn classification, but also to assess how well our classification worked. Let's start by loading the necessary libraries, data (we'll continue exploring the breast cancer data set from last chapter) and making a quick scatter plot of tumour cell concavity versus smoothness, labelling the points be diagnosis class.
 
-```{r precode, message = FALSE, fig.height = 4, fig.width = 5}
+```{r 06-precode, message = FALSE, fig.height = 4, fig.width = 5}
 # load libraries
 library(tidyverse)
 library(caret)
@@ -65,7 +65,7 @@ Next, lets split our data into a training and a validation set using `caret`'s `
 
 The `createDataPartition` function returns the row numbers for the training set. 
 
-```{r get indices for training set}
+```{r 06-get-indices-for-training-set}
 set.seed(1234) # makes the random selection of rows reproducible
 set_rows <- cancer %>% 
   select(Class) %>% 
@@ -78,7 +78,7 @@ head(set_rows)
 
 Now that we have the row numbers for the training set, we can use the `slice` function to get the rows from the original data set (here `cancer`) to create the training set and the validation sets.
 
-```{r create training and validation sets}
+```{r 06-create-training-and-validation-sets}
 training_set <- cancer %>% slice(set_rows)
 validation_set <- cancer %>% slice(-set_rows)
 glimpse(training_set)
@@ -94,7 +94,7 @@ We can see from `glimpse` in the code above that the training set contains 427 o
 
 Now that we have split our original data set into a training and validation set, we can create our k-nn classifier using the training set. We explained how to do this last chapter, so here we just do it! For the time being we will just choose a single $k$ of 3, and use the predictors concavity and smoothness.
 
-```{r create k-nn classifier}
+```{r 06-create-k-nn-classifier}
 X_train <- training_set %>% 
   select(Concavity, Smoothness) %>% 
   data.frame()
@@ -114,7 +114,7 @@ model_knn
 
 Now that we have a k-nn classifier object, we can use it to predict the class labels for our validation set:
 
-```{r predict validation}
+```{r 06-predict-validation}
 X_validation <- validation_set %>% 
   select(Concavity, Smoothness) %>% 
   data.frame()
@@ -131,7 +131,7 @@ Finally we can assess our classifier's accuracy. To do this we need to create a 
 1. `data` (the predicted class labels for the validation set), and 
 2. `reference` (the original/measured class labels for the validation set).
 
-```{r accuracy}
+```{r 06-accuracy}
 Y_validation <- validation_set %>% 
   select(Class) %>% 
   unlist()
@@ -154,7 +154,7 @@ Is that the best estimate of accuracy that we can get? What would happen if we a
 
 Using `set.seed(4321)`
 
-```{r set seed 4321}
+```{r 06-set-seed-4321}
 set.seed(4321) # makes the random selection of rows reproducible
 set_rows <- cancer %>% 
   select(Class) %>% 
@@ -182,7 +182,7 @@ model_quality$overall[1]
 ```
 
 Using `set.seed(8765)`
-```{r set seed 5678}
+```{r 06-set-seed-5678}
 set.seed(8765) # makes the random selection of rows reproducible
 set_rows <- cancer %>% 
   select(Class) %>% 
@@ -218,13 +218,13 @@ In the picture above, 5 different folds/partitions of the data set are shown, an
 1. `method` (method used for assessing classifier quality, here we specify `"cv"` for cross-validation)
 2. `number` (how many folds/partitions of the data set we want to use for cross validation)
 
-```{r}
+```{r 06-train-control}
 train_control <- trainControl(method="cv", number = 5)
 ```
 
 Then when we create our classifier we add an additional argument to `train`, called `trControl` where we give it the name of the object we created with the `trainControl` function. Additionally, we do not need to specify a training and a validation set because we are telling `train` that we are doing cross validation (it will take care creating the folds, calculating the accuracy for each fold and averaging the accuracies for us).
 
-```{r }
+```{r 06-5-fold}
 X_cancer <- cancer %>% 
   select(Concavity, Smoothness) %>% 
   data.frame()
@@ -242,7 +242,7 @@ knn_model_cv_5fold
 
 We can choose any number of folds, typically the more the better. However we are limited by computational power. The more folds we choose, the more computation it takes, and hence the more time it takes to run the analysis. So for each time you do cross-validation you need to consider the size of the data, and the speed of the algorithm (here k-nn) and the speed of your computer. In practice this is a trial and error process. Here we show what happens when we do 10 folds:
 
-```{r}
+```{r 06-10-fold}
 train_control <- trainControl(method="cv", number = 10)
 
 set.seed(1234)
@@ -254,7 +254,7 @@ knn_model_cv_10fold
 
 From 5- and 10-fold cross-validate we estimate that the prediction accuracy of our classifier to be ~ 83%. This could be not too bad of an accuracy, however what accuracy you aim for always depends on the downstream application of your analysis. Here, we are trying to predict a very important outcome, tumour cell diagnosis class. And the class label we assign to a real patient may have life or death consequences. Hence, we'd like to do better for this application than 83%. To do this we can use cross-validation in an even bigger way, we can choose a range of possible $k$'s and perform cross-validation to calculate the accuracy for each $k$, and then choose the smallest $k$ which gives us the best cross-validation accuracy. To do this, we will create a vector of values for $k$ instead of providing just 1.
 
-```{r}
+```{r 06-range-cross-val}
 train_control <- trainControl(method="cv", number = 10)
 k = data.frame(k = c(1, 3, 5, 7, 9, 11, 13, 15, 17))
 
@@ -265,14 +265,14 @@ knn_model_cv_10fold
 
 Then to help us choose $k$ it is very useful to visualize the accuracies as we increase $k$. This will help us choose the smallest $k$ with the biggest accuracy. We can access the results from the cross-validation by accessing the`results` attribute of the `train` object (our classifier).
 
-```{r}
+```{r 06-accuracies}
 accuracies <- knn_model_cv_10fold$results
 accuracies 
 ```
 
 Now we can plot accuracy versus k:
 
-```{r find_k, fig.height = 4, fig.width = 5}
+```{r 06-find-k, fig.height = 4, fig.width = 5}
 accuracy_vs_k <- ggplot(accuracies, aes(x = k, y = Accuracy)) +
   geom_point() +
   geom_line()
@@ -284,7 +284,7 @@ Based off of the visualization above we typically would choose $k$ to be ~ 11, g
 
 Why do we want to keep $k$ small? Well this is because if we keep increasing $k$ our accuracy actually starts to decrease! Take a look as the plot below as we vary $k$ from 1 to almost the number of observations in the data set:
 
-```{r lots_of_ks, fig.height = 4, fig.width = 5}
+```{r 06-lots-of-ks, fig.height = 4, fig.width = 5}
 train_control <- trainControl(method="cv", number = 10)
 k_lots = data.frame(k = seq(from = 1, to = 499, by = 10))
 set.seed(1234)
@@ -347,7 +347,7 @@ results_all$overall[1]
 
 We can see that by including more information (making our classifier more complex by adding additional predictors/explanatory variables) we increased the training accuracy. What about the cross-validation accuracy? And what $k$ should we choose?
 
-```{r more_info, fig.height = 4, fig.width = 5}
+```{r 06-more-info, fig.height = 4, fig.width = 5}
 accuracies_all <- knn_model_all
 accuracy_vs_k_all <- ggplot(accuracies_all, aes(x = k, y = Accuracy)) +
   geom_point() +
@@ -393,7 +393,7 @@ head(unscaled_cancer)
 
 Looking at the unscaled data above, you can see that the difference between the values for smoothness measurements are much larger than those for area. Let's make a scatter plot for these two predictors below (colouring by diagnosis) and then overlay that with a new observation we would like to classify as either benign or malignant with a red dot. We'll do this for the unscaled and scaled data sets, and put them side-by-side:
 
-```{r warning = FALSE, echo =  FALSE,  fig.height = 4, fig.width = 10}
+```{r 06-scaling, warning = FALSE, echo =  FALSE,  fig.height = 4, fig.width = 10}
 unscaled_cancer <- unscaled_cancer %>% 
   select(ID, Class, Area, Smoothness)
 new_obs <- tibble(ID = 99999, Class = "unknown", Area = 3.7, Smoothness = 5.3)
