--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -271,7 +271,7 @@ So what to do now? Well, we shouldn't scrape Craigslist! Let's instead scrape so
 
 Now that we have our CSS selectors we can use `rvest` R package to scrape our desired data from the website. First we start by loading the `rvest` package:
 
-```{r load rvest}
+```{r 01-load-rvest}
 library(rvest)
 ```
 
@@ -281,21 +281,21 @@ library(rvest)
 
 Next, we tell R what page we want to scrape by providing the webpage's URL in quotations to the function `read_html`:
 
-```{r specify page}
+```{r 01-specify-page}
 page <- read_html("https://en.wikipedia.org/wiki/Canada")
 ```
 
 
 Then we send the page object to the `html_nodes` function. We also provide that function with the CSS selectors we obtained from the selectorgadget tool. These should be surrounded by quotations. The `html_nodes` function select nodes from the HTML document using CSS selectors. nodes are the HTML tag pairs as well as the content between the tags. For our CSS selector `td:nth-child(5)` and example node that would be selected would be: `<td style="text-align:left;background:#f0f0f0;"><a href="/wiki/London,_Ontario" title="London, Ontario">London</a></td>`
 
-```{r select nodes}
+```{r 01-select-nodes}
 population_nodes <- html_nodes(page, "td:nth-child(5) , td:nth-child(7) , .infobox:nth-child(122) td:nth-child(1) , .infobox td:nth-child(3)")
 head(population_nodes)
 ```
 
 Next we extract the meaningful data from the HTML nodes using the `html_text` function. For our example, this functions only required argument is the an html_nodes object, which we named `rent_nodes`. In the case of this example node: `<td style="text-align:left;background:#f0f0f0;"><a href="/wiki/London,_Ontario" title="London, Ontario">London</a></td>`, the `html_text` function would return `London`.
 
-```{r get text}
+```{r 01-get-text}
 population_text <- html_text(population_nodes)
 head(population_text)
 ```
