--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -85,7 +85,7 @@ One common thing that often has to be done to get data into a tidy format is to 
 
 For example, the we read in data below is not in tidy format, but is in a very intuitive format for human understanding:
 
-```{r}
+```{r 02-tidyverse}
 library(tidyverse)
 ```
 ```
@@ -256,13 +256,13 @@ gather(hist_vote_messy,
 
 Where should you turn when you discover the next step in your data wrangling/cleaning process requires you to apply a function to each column in a data frame? For example, if you wanted to know the maximum value of each column in a data frame, you could use `purrr`'s `map` function to apply the `max` function to each column. For example, let's do that and find that maximum value of each column of the `mtcars` data frame (a built-in data set that comes with R). First, let's peak at an become familiar with the data:
 
-```{r preview data}
+```{r 02-preview-data}
 head(mtcars)
 ```
 
 Next, we can use `map` to apply the `max` function to each column. `map` takes two arguments, an object (a vector, data frame or list) that you want to apply the function to, and the function that you would like to apply. Here our arguments will be `mtcars` and `max`:
 
-```{r map}
+```{r 02-map}
 max_of_columns <- map(mtcars, max)
 max_of_columns
 ```
@@ -272,7 +272,7 @@ max_of_columns
 
 Our output looks a bit weird though? We passed in a data frame, but our output doesn't look like a data frame... And that it because it isn't, its a plain vanilla list:
 
-```{r type out of map}
+```{r 02-type-out-of-map}
 typeof(max_of_columns)
 ```
 
@@ -289,7 +289,7 @@ So what do we do? Convert this to a data frame? No need, what we should do inste
 
 So let's get the column maximum's again, but this time use the `map_df` function to return the output as a data frame:
 
-```{r map df example}
+```{r 02-map-df-example}
 max_of_columns <- map_df(mtcars, max)
 max_of_columns
 ```
