Updates to intro paragraph and learning objectives

--- a/index.Rmd
+++ b/index.Rmd
@@ -33,15 +33,16 @@ output:
 
 # Introduction to Data Science
 
-This is an open source textbook aimed at introducing undergraduate students to Data Science. It was originally written for the University of British Columbia's DSCI 100 - Introduction to Data Science course. 
+This is an open source textbook aimed at introducing undergraduate students to Data Science. It was originally written for the University of British Columbia's [DSCI 100 - Introduction to Data Science course](https://ubc-dsci.github.io/dsci-100/). 
 
-This course uses Jupyter and the R programming language to illustrate how to solve 3 common problems in Data Science:
+This course uses Jupyter and the R programming language to illustrate how to solve 4 common problems in Data Science:
 
 1. Predicting a class/category for a new observation/measurement (e.g., cancerous or benign tumour)
-2. Finding previously unknown/unlabelled subgroups in your data (e.g., products commonly bought together on Amazon)
-3. Predicting a value for a new observation/measurement (e.g., 10 km race time for 30-35 year old males with a BMI > 25).
+2. Predicting a value for a new observation/measurement (e.g., 10 km race time for 20 year old females with a BMI of 25).
+3. Finding previously unknown/unlabelled subgroups in your data (e.g., products commonly bought together on Amazon)
+4. Estimating an average or a proportion from a sample (e.g., the proportion of undergraduate students that own an iphone)
 
-This book/course is structured so that learners spend the first four chapters learning how to use R to load, wrangle/clean and plot data. The remaining 4 chapters cover solutions to the three solutions provided above. 
+This book/course is structured so that learners spend the first four chapters learning how to use R to load, wrangle/clean and visualize data. The remaining chapters cover solutions to the four problems discussed above. 
 
 ## Chapter learning objectives
 
